Fix List styles on mobile

--- a/src/modules/pokemon/Card/styles.scss
+++ b/src/modules/pokemon/Card/styles.scss
@@ -14,10 +14,18 @@
 }
 
 .Card-helper {
-  min-width: 364px;
-  width: 40%;
+  width: 100%;
   height: 288px;
   margin: 0 auto;
+}
+
+@media (min-width: 420px) {
+  .Card-helper {
+    min-width: 364px;
+    width: 40%;
+    height: 288px;
+    margin: 0 auto;
+  }
 }
 
 @media (min-width: 920px) {
